# AUG

./: .gitignore  .gitmodules  LICENSE  README.md  build_AUG.cmd  build_deps.cmd  squash.cmd
data/: deps.txt  fonts.ini
src/: AUG.cpp  AUG.h  AUGCore.h  Assistant.cpp  Assistant.h  CMakeLists.txt  CurtainWindow.cpp  CurtainWindow.h  FakeCursor.cpp  FakeCursor.h  HotkeyWindow.cpp  HotkeyWindow.h  ImageToText.cpp  ImageToText.h  IniFile.cpp  IniFile.h  RawArray.h  ScreenCapture.cpp  ScreenCapture.h  SoundConverter.cpp  SoundConverter.h  SoundRecorder.cpp  SoundRecorder.h  SpeechToText.cpp  SpeechToText.h  TextEditor.cpp  WaveCore.cpp  WaveCore.h  imgui_utils.h  log.cpp  log.h  main.cpp
